# BeatNet

./: .gitmodules
onnx/: .gitignore  BeatNet.cpp  BeatNet.h  CMakeLists.txt  CmakeLists.txt  README.md  beatnet.cpp  beatnet.h  beatnet_bda.onnx  dynamic_link.cpp  dynamic_link.h  exportModel.py  fftprocessor.cpp  fftprocessor.h  filterbankprocessor.cpp  filterbankprocessor.h  frameprocessor.cpp  frameprocessor.h  inference.cpp  logspecutils.cpp  logspecutils.h  main.cpp  requirements.txt  resampler.cpp  resampler.h  testModel.py
onnx/cmake/: TADA  fftw3 copy.cmake  fftw3.cmake  kissfft.cmake  libsamplerate.cmake  onnxruntime.cmake
